# ps-seminarska-blockchain

./: README.md
lib/: Makefile  README.md  pow  pow.c
rust-gpu/: Cargo.toml  OPENCL-PRISPEVEK.md  README-RUST.md
rust-gpu/docs/: Izracuni PS opencl.xlsx  stetje-nicel.psd  work-acq-opencl.psd
rust-gpu/src/: input.sh  lib.rs  main.rs
rust-gpu/src/cl-src/: .clang-format  kernel.cl
src/: Makefile  a.out  example-pthreads-run  mpi-main.cpp  omp.cpp  pthreads.c  sequential.c
src/in/: benchmark_merged.txt  benchmark_z_1_m_5.txt  benchmark_z_2_m_5.txt  benchmark_z_3_m_5.txt  benchmark_z_4_m_5.txt  benchmark_z_5_m_5.txt  benchmark_z_6_m_5.txt  benchmark_z_7_m_5.txt  sample_inputs_hex.txt
util/md5-gen/: Cargo.toml
util/md5-gen/src/: args.rs  main.rs
util/md5-util/: Cargo.toml
util/md5-util/src/: main.rs
