[package]
name = "rust-gpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ocl = "0.19"
colorify = "0.2"
hex = "0.4.3"
hex-slice = "0.1.4"
clap = { version = "3.0.14", features = ["derive"] }
num-format = "0.4.0"